collapsing of header resolved

--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -2,6 +2,7 @@
     color: black !important;
     text-align: center;
     font-size: 30px;
+
 }
 
 .input-container {
@@ -9,6 +10,7 @@
     display: flex;
     width: 100%;
     margin-bottom: 15px;
+
 }
 .input-field {
     width: 100%;
@@ -41,10 +43,18 @@
     color: white;
     margin-top: 15%;
     margin-left: 5%;
+
+}
+.collapsefixer{
+    z-index: 1;
+    margin-top: -50px;
 }
 .topnav {
     overflow: hidden;
     background-color: #354763;
+    position: fixed;
+
+
 }
 
 .topnav a {
@@ -55,11 +65,13 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+
 }
 
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+
 }
 
 .topnav a.active {
@@ -76,6 +88,7 @@
     margin-top: 8px;
     font-size: 17px;
     border: none;
+
 }
 
 .topnav .search-container button {
@@ -87,15 +100,20 @@
     font-size: 17px;
     border: none;
     cursor: pointer;
+
 }
 
 .topnav .search-container button:hover {
     background: #ccc;
+
 }
 .sidenav {
     padding-top: 2%;
     color: white;
     background-color: #1a6785;
     height: 100%;
+
+
+
 }
 
